Amended bug where dropdown list for menu was appearing on left side of screen and the logo was dropping below the navbar on smaller viewports.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,10 +33,16 @@ header{
 }
 
 .logo2{
-    height:150px;
-    width: auto;
+    height:135px;
+    width: 190px;
     display: inherit;
 
+}
+
+.ul-bg {
+    background-color: #e7e7e7;
+    padding: 10px;
+    
 }
 
 
